--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script>
     async function pay() {
       try {
-        const res = await fetch('https://script.google.com/macros/s/你的ID/exec', {
+        const res = await fetch('https://script.google.com/macros/s/AKfycbzv-SKHN_pcSRWMUaG6MegsenTjauGsmiIQFmBXVW1j7_nIYMi0PBN3ARiP0uev3Exl/exec', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
